--- a/papers/edgesys2023/simulation.tex
+++ b/papers/edgesys2023/simulation.tex
@@ -31,7 +31,7 @@ more explanations.)
 \new{
   The first scenario, depicted in Figure~\ref{fig:edge}, involves a group of drones that move cyclically through a network of interconnected nodes. The drones move through the cycle, gradually transitioning from one node to the next. The total load is kept constant ($1.0$) with interactive jobs.
 The different cost models are used for the nodes while the same monotonic cost is used for the links.
-With the constant costs, each drone is assigned to the nearest node. In the other cases, the load of each node does not go up beyound $.75$, with the difference in the assignment of the remaining load.
+With the constant costs, each drone is assigned to the nearest node. In the other cases, the load of each node does not go up beyond $.75$, with the difference in the assignment of the remaining load.
 The monotonic costs try to make the remaining load equally shared, while the convex costs try to shift the remaining load to one node. At time $20$ in (c), the remaining load starts to shift from node~1 to node~3 and, once it hits the balancing point, all the remaining load moves to node~3.
 This behavior leads to the stability in turbulence with convex costs.
 %In the convex case, the drones exhibit longer stability phases compared to the monotonic case, with fewer active resources (nodes and links) being utilized at any given time. Another significant difference is observed at the end of a cycle, such as at time $20$, when the drones begin to transition, leading to a shift in the extra loads.
