another final touch

--- a/papers/edgesys2023/model.tex
+++ b/papers/edgesys2023/model.tex
@@ -262,7 +262,7 @@ $f(.5)$ for the deactivating one.
 \label{sec:variation}
 
 The utilization of a resource can be manipulated by modifying the cost
-function of the resource as the variants in Figure~\ref{fig:std_costfunc}.
+function of the resource as shown as the variants in Figure~\ref{fig:std_costfunc}.
 One can {\em lower or raise the load level} of a resource by shifting
 the load in the cost function and adjusting the target load,
 $f'(\rho) = f(\rho + \Delta)$.
